# expansion_gazebo_sfm_plugin

./: COMANDOS_UTILES.txt  README.md
Docker/: Dockerfile
TFM_jose_ws/devel/: .catkin  .rosinstall  _setup_util.py
TFM_jose_ws/devel/include/gazebo_sfm_plugin/: AssignTask.h  AssignTaskRequest.h  AssignTaskResponse.h  LoadTasks.h  LoadTasksRequest.h  LoadTasksResponse.h  PedestrianSFMPluginConfig.h  Return_home.h  Return_homeRequest.h  Return_homeResponse.h  Task.h  TaskAssignmentAction.h  TaskAssignmentActionFeedback.h  TaskAssignmentActionGoal.h  TaskAssignmentActionResult.h  TaskAssignmentFeedback.h  TaskAssignmentGoal.h  TaskAssignmentResult.h  Update_waypoint.h  Update_waypointRequest.h  Update_waypointResponse.h
TFM_jose_ws/devel/lib/gazebo_sfm_plugin/: cafe_robot_system  task_coordinator
TFM_jose_ws/devel/lib/pkgconfig/: aws_robomaker_hospital_world.pc  gazebo_sfm_plugin.pc
TFM_jose_ws/devel/lib/python3/dist-packages/gazebo_sfm_plugin/cfg/: PedestrianSFMPluginConfig.py
TFM_jose_ws/devel/lib/python3/dist-packages/gazebo_sfm_plugin/msg/: _Task.py  _TaskAssignmentAction.py  _TaskAssignmentActionFeedback.py  _TaskAssignmentActionGoal.py  _TaskAssignmentActionResult.py  _TaskAssignmentFeedback.py  _TaskAssignmentGoal.py  _TaskAssignmentResult.py  __init__.py
TFM_jose_ws/devel/lib/python3/dist-packages/gazebo_sfm_plugin/srv/: _AssignTask.py  _LoadTasks.py  _Return_home.py  _Update_waypoint.py  __init__.py
TFM_jose_ws/devel/share/aws_robomaker_hospital_world/cmake/: aws_robomaker_hospital_worldConfig.cmake
TFM_jose_ws/devel/share/common-lisp/ros/gazebo_sfm_plugin/msg/: Task.lisp  TaskAssignmentAction.lisp  TaskAssignmentActionFeedback.lisp  TaskAssignmentActionGoal.lisp  TaskAssignmentActionResult.lisp  TaskAssignmentFeedback.lisp  TaskAssignmentGoal.lisp  TaskAssignmentResult.lisp  _package.lisp  _package_Task.lisp  _package_TaskAssignmentAction.lisp  _package_TaskAssignmentActionFeedback.lisp  _package_TaskAssignmentActionGoal.lisp  _package_TaskAssignmentActionResult.lisp  _package_TaskAssignmentFeedback.lisp  _package_TaskAssignmentGoal.lisp  _package_TaskAssignmentResult.lisp  gazebo_sfm_plugin-msg.asd
TFM_jose_ws/devel/share/common-lisp/ros/gazebo_sfm_plugin/srv/: AssignTask.lisp  LoadTasks.lisp  Return_home.lisp  Update_waypoint.lisp  _package.lisp  _package_LoadTasks.lisp  _package_Return_home.lisp  _package_Update_waypoint.lisp  gazebo_sfm_plugin-srv.asd
TFM_jose_ws/devel/share/gazebo_sfm_plugin/cmake/: gazebo_sfm_plugin-msg-extras.cmake  gazebo_sfm_plugin-msg-paths.cmake  gazebo_sfm_pluginConfig.cmake
TFM_jose_ws/devel/share/gazebo_sfm_plugin/docs/: PedestrianSFMPluginConfig-usage.dox  PedestrianSFMPluginConfig.dox  PedestrianSFMPluginConfig.wikidoc
TFM_jose_ws/devel/share/gazebo_sfm_plugin/msg/: TaskAssignmentAction.msg  TaskAssignmentActionFeedback.msg  TaskAssignmentActionGoal.msg  TaskAssignmentActionResult.msg  TaskAssignmentFeedback.msg  TaskAssignmentGoal.msg  TaskAssignmentResult.msg
TFM_jose_ws/devel/share/gennodejs/ros/gazebo_sfm_plugin/msg/: Task.js  TaskAssignmentAction.js  TaskAssignmentActionFeedback.js  TaskAssignmentActionGoal.js  TaskAssignmentActionResult.js  TaskAssignmentFeedback.js  TaskAssignmentGoal.js  TaskAssignmentResult.js  _index.js
TFM_jose_ws/devel/share/gennodejs/ros/gazebo_sfm_plugin/srv/: AssignTask.js  LoadTasks.js  Return_home.js  Update_waypoint.js  _index.js
TFM_jose_ws/devel/share/roseus/ros/gazebo_sfm_plugin/: manifest.l
TFM_jose_ws/devel/share/roseus/ros/gazebo_sfm_plugin/msg/: Task.l  TaskAssignmentAction.l  TaskAssignmentActionFeedback.l  TaskAssignmentActionGoal.l  TaskAssignmentActionResult.l  TaskAssignmentFeedback.l  TaskAssignmentGoal.l  TaskAssignmentResult.l
TFM_jose_ws/devel/share/roseus/ros/gazebo_sfm_plugin/srv/: AssignTask.l  LoadTasks.l  Return_home.l  Update_waypoint.l
TFM_jose_ws/mis_mapas/: mi_mapa_bueno_mejorado.pgm  mi_mapa_bueno_mejorado.yaml
TFM_jose_ws/src/aws-robomaker-hospital-world-ros1/models/: aws_robomaker_residential_CoffeeTable_01.rar
TFM_jose_ws/src/aws-robomaker-hospital-world-ros1/models/aws_robomaker_residential_KitchenCabinet_01/materials/textures/: aws_KitchenCabinet_01.pngZone.Identifier
TFM_jose_ws/src/gazebo_sfm_plugin/: CMakeLists.txt  package.xml
TFM_jose_ws/src/gazebo_sfm_plugin-master/: CMakeLists.txt  package.xml
TFM_jose_ws/src/gazebo_sfm_plugin-master/cfg/: PedestrianSFMPlugin.cfg
TFM_jose_ws/src/gazebo_sfm_plugin-master/include/gazebo_sfm_plugin/: PedestrianSFMPlugin.h  TaskCoordinator.h
TFM_jose_ws/src/gazebo_sfm_plugin-master/launch/: cafe_tfm.launch  cafetfm.launch  hospital_tfm.launch
TFM_jose_ws/src/gazebo_sfm_plugin-master/src/: PedestrianSFMPlugin.cpp  TaskCoordinator.cpp
TFM_jose_ws/src/gazebo_sfm_plugin-master/srv/: AssignTask.srv  Update_waypoint.srv
TFM_jose_ws/src/gazebo_sfm_plugin-master/worlds/: Nuevo Documento de texto.txt  cafe.world  hospital_sin_pedestrians.world  hospital_tfm.world
TFM_jose_ws/src/gazebo_sfm_plugin/cfg/: PedestrianSFMPlugin.cfg  Tasks.yaml  Tasks2.yaml
TFM_jose_ws/src/gazebo_sfm_plugin/include/gazebo_sfm_plugin/: PedestrianSFMPlugin.h  TaskCoordinator.h
TFM_jose_ws/src/gazebo_sfm_plugin/launch/: cafe.launch  cafe3.launch  cafe_empty.launch  cafe_mapping.launch  cafe_nav.launch  cafe_taskcoordinator.launch  cafe_tfm.launch  cafesolo3ped.launch
TFM_jose_ws/src/gazebo_sfm_plugin/media/models/: ImageToStl.com_walk.zipZone.Identifier  walk.stl
TFM_jose_ws/src/gazebo_sfm_plugin/media/models/paintbuckets/meshes/: paintbuckets.daeZone.Identifier
TFM_jose_ws/src/gazebo_sfm_plugin/msg/: Task.msg
TFM_jose_ws/src/gazebo_sfm_plugin/src/: CafeRobotSystem.cpp  PedestrianSFMPlugin.cpp  TaskCoordinator.cpp
TFM_jose_ws/src/gazebo_sfm_plugin/srv/: LoadTasks.srv  Return_home.srv  Update_waypoint.srv
TFM_jose_ws/src/gazebo_sfm_plugin/worlds/: cafe.world  cafe3.world  cafe_tfm.world
TFM_jose_ws/src/lightsfm-master/include/: angle.hpp  sfm.hpp
