<?xml version="1.0"?>
<package format="2">
  <name>gazebo_sfm_plugin</name>
  <version>1.0.0</version>
  <description>The gazebo_sfm_plugin package</description>
  <maintainer email="noeperez@upo.es">Noé Pérez-Higueras</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/robotics-upo/gazebo_sfm_plugin</url>
  <author>Noé Pérez</author>

  <!-- Build Tool Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build Dependencies -->
  <build_depend>lightsfm</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <!-- Execution Dependencies -->
  <exec_depend>lightsfm</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>